@@ -3,6 +3,5 @@ echo Compiling...
 call mvn clean compile
 
 echo Running on Windows...
-
-call mvn exec:java -Dexec.mainClass="shapeviewer.ShapeViewerApp" --add-opens java.desktop/sun.awt=ALL-UNNAMED
+call mvn exec:java
 pause
